hphp/hack/test/pocket_universes/typing/decl5.bad.php.exp
File "decl5.bad.php", line 10, characters 28-30:
Unbound name: unk (a global constant) (Naming[2049])
File "decl5.bad.php", line 11, characters 28-31:
Unbound name: this (a global constant) (Naming[2049])
File "decl5.bad.php", line 10, characters 28-30:
Unbound global constant (Typing) (Typing[4106])
File "decl5.bad.php", line 11, characters 28-31:
Unbound global constant (Typing) (Typing[4106])
File "decl5.bad.php", line 9, characters 36-41:
No static method 'stupid' in PU12 (did you mean instance method 'stupid'?) (Typing[4090])
File "decl5.bad.php", line 3, characters 7-10:
Declaration of PU12 is here
